create user functionality without db
